Explained things, commented out junk, updated outdated information
Updated and added current staff
Updated staff rules with current rules for staff
Updated details with website backup so users are still able to get the backup website with the main domain being fucky due to hosting screwups.
Commented out administrative troll stuff because we're not assholes
Changed [JT] to [FF]
Commented out useless junk
Commented out narcissistic junk
Commented out commands that only Joshtiger can use
Left comments on what quite a few things actually do

--- a/MyCommand/commands/FeralFalls.yml
+++ b/MyCommand/commands/FeralFalls.yml
@@ -146,12 +146,23 @@ staff:
   - '$text$&7[&dMain Owner&7] &8VascoTheDog'
   - '$text$&7[&2Owner&7] &1Brainnuggets'
   - '$text$&7[&2Owner&7] &bKodyy'
-  - '$text$&7[&1Co-Owner&7/&9Head-Developer&7] &6joshtiger'
-  - '$text$&7[&9Head-Admin&7] &dMeowmeth'
-  - '$text$&7[&aAdmin&7] &bpeepaw420'
-  - '$text$&7[&3Moderator&7] &4Maji_the_fox'
+  - '$text$&7[&9Co-Owner&7] &dMeowMeth' #Updated MeowMeth from Head Admin to Co-Owner to reflect current position
+  - '$text$&7[&9Co-Owner&7] &dParadoxPanda' #Added as new co-owner
+  - '$text$&7[&9Co-Owner&7] &dHenrickTheBull' #Added as new co-owner
+  #JoshTiger Credit used to be here. Removed
+  - '$text$&7[&9Head-Admin&7] &dMegakarp' #Added as new Head-Admin
+  #Peepaw420 no longer staff
+  - '$text$&7[&3Admin&7] &4MewMMG' #Added as admin, is admin
+  - '$text$&7[&3Moderator&7] &4LazyFeeling'
+  #Beginning of moderation team
+  - '$text$&7[&3Moderator&7] &4Kuraiskrap'
+  - '$text$&7[&3Moderator&7] &4sampsonboys'
+  - '$text$&7[&3Moderator&7] &4ValSmythe'
+  - '$text$&7[&3Moderator&7] &4CongruousTunic7'
+  - '$text$&7[&3Moderator&7] &4PinkFloydFan03'
   - '$text$&7[&3Moderator&7] &9CJFoxFurry'
   - '$text$&7[&3Moderator&7] &1GyroDragona'
+  #End of moderation team
   - '$text$&b'
   - '$text$&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-'
   
@@ -164,12 +175,22 @@ staffrules:
   type: RUN_CONSOLE
   runcmd:
   - /execute as $player at @s run playsound gamez.beep.11 master @s ~ ~ ~ 5 1.35
+  #Start staff rules taken from Staff-rules-and-guidelines from TFB Staff Discord
+  #This displays the rules for staff using /staff in chat
   - '$text$&2&lStaff &4&lrules &6&lPage 1/1'
   - '$text$&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-'
   - '$text$&b'
-  - '$text$&bUhhhhhhhhh... so how are you doing on this fine day? x3'
+  - '$text$&b1 Do not abuse power such as trolling, random bans or kicks or muts nor world edit abuse nor spawning shit for players!'
+  - '$text$&b2 Do not start drama! This includes with staff or players, we're problem solvers not problem starters!'
+  - '$text$&b3 Respect Higher Ranking Staff!  Disrespect will not be tolerated'
+  - '$text$&b4 Notify high staff if you're going to be inactive, this way we know not to bother you and can put you on hiatus'
+  - '$text$&b5 Take staff duties seriously, there's a time and place for everything'
+  - '$text$&b6 Log your incidents!  That way we can keep things in proper order!'
+  - '$text$&b7 Tolerate no disrespect from players.  You're staff for a reason, take charge!'
+  - '$text$&e Staff with Console access, see Staff Discord for rules for console!'
   - '$text$&b'
   - '$text$&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-&2-&a-'
+  #End staff rules
   
   permission-error: "&9[&2&lJ&6&lT&9]: &cYou do not have permissions to use this command."
   permission-required: false
@@ -202,7 +223,8 @@ FFwebsite:
   runcmd:
   - '$text$&9'
   - '$text$&9[&a&lF§2§lF&9]: §b§lWebsite: &9&ohttp://www.feralfalls.com/'
-  - '$text$&9[&a&lF§2§lF&9]: §3§lForm site: &9&ohttps://feralfalls.enjin.com/forum'
+  - '$text$&9[&a&lF§2§lF&9]: §b§lWebsite Backup: &9&ohttps://thefoxbox.000webhostapp.com/' #Alternate website that doesn't have current problems
+  - '$text$&9[&a&lF§2§lF&9]: §3§lForum site: &9&ohttps://feralfalls.enjin.com/forum' #Updated to correct the word Forum spelling
   - '$text$&9'
 
   permission-error: "&9[&2&lJ&6&lT&9]: &cYou do not have permissions to use this command."
@@ -215,6 +237,7 @@ FFlinks:
   runcmd:
   - '$text$&9'
   - '$text$&9[&a&lF§2§lF&9]: §b§lWebsite: &9&ohttp://www.feralfalls.com/'
+  - '$text$&9[&a&lF§2§lF&9]: §b§lWebsite Backup: &9&ohttps://thefoxbox.000webhostapp.com/' #Alternate website that doesn't have current problems
   - '$text$&9[&a&lF§2§lF&9]: §3§lForm site: &9&ohttps://feralfalls.enjin.com/forum'
   - '$text$&9'
 
@@ -228,6 +251,9 @@ Donate:
   type: RUN_CONSOLE
   runcmd:
   - '$text$&9[&a&lF§2§lF&9]: &bDonations are here OuO ---> &9&ohttp://feralfalls.com/'
+  - '$text$&9[&a&lF§2§lF&9]: &bIf above site fails to load you can use ---> &9&ohttps://thefoxbox.000webhostapp.com/'
+  #Above URL is alternate working version for Feral Falls. Domain name fails to load much of the time and has been that way for a while, 
+  #the 000webhostapp link is the same site and information as the official domain
 
   permission-error: "&cError: Only &6joshtiger &ccan use this command!"
   permission-required: false
