Commented research on /whoaccepted
Researched issue with WhoAccepted, works for Panda and Mew but nobody else, commented lines accordingly as to what they specifically do and where to find jtcmd

--- a/MyCommand/commands/joshtiger_admin.yml
+++ b/MyCommand/commands/joshtiger_admin.yml
@@ -42,18 +42,21 @@ bright:
   permission-node: joshtiger.bright
   register: true
 
+#The jtcmd can be found in MyCommand\commands\joshtiger.yml line 1 through 11
+#Seems to have something to do specifically with what a player's tag is if they can get this to work or not
+#Works for Panda and MewMMG but seemingly nobody else.
 whoaccepted:
   command: /whoaccepted
   type: RUN_CONSOLE
   runcmd:
-  - /tellraw @a[tag=JTCMDLOG] {"text":"&f[&4&lFF&f] &f$player used /WhoAccepted."} #I honestly have no fucking clue, dude. make Panada do this
+  - /tellraw @a[tag=JTCMDLOG] {"text":"&f[&4&lFF&f] &f$player used /WhoAccepted."} #uses /jtcmd custom commandline tool to send tellraw data
   - '$text$&f '
   - '$text$&f[&4&lFF&f]: &fListing players' rules status'
-  - /tellraw @a[tag=IsStaff,name=$player] {"text":"&f[Accepted the rules]"}
-  - /execute as @a[tag=RulesAccepted] at @s run tellraw @a[tag=IsStaff,name=$player] [{"selector":"@s","color":"dark_green"}]
-  - /tellraw @a[tag=IsStaff,name=$player] {"text":" "}
-  - /tellraw @a[tag=IsStaff,name=$player] {"text":"&f[Did not accept the rules yet]"}
-  - /execute as @a[tag=!RulesAccepted] at @s run tellraw @a[tag=IsStaff,name=$player] [{"selector":"@s","color":"dark_red"}]
+  - /tellraw @a[tag=IsStaff,name=$player] {"text":"&f[Accepted the rules]"} #Checks for staff and names players that accept the rules as notification
+  - /execute as @a[tag=RulesAccepted] at @s run tellraw @a[tag=IsStaff,name=$player] [{"selector":"@s","color":"dark_green"}] #Checks for staff and then displays names of players that accepted rules in a list
+  - /tellraw @a[tag=IsStaff,name=$player] {"text":" "} #Checks for staff once again
+  - /tellraw @a[tag=IsStaff,name=$player] {"text":"&f[Did not accept the rules yet]"} #Checks for staff then displays line of text [Did not accept the rules yet]
+  - /execute as @a[tag=!RulesAccepted] at @s run tellraw @a[tag=IsStaff,name=$player] [{"selector":"@s","color":"dark_red"}] #Checks for staff yet again, then displays list of players who have not accepted the rules
   - '$text$&f '
   permission-error: "&f[&4&lFF&f]: &cThis command is meant for staff use only."
   permission-required: true
