--- a/MyCommand/commands/FeralFalls.yml
+++ b/MyCommand/commands/FeralFalls.yml
@@ -15,9 +15,9 @@ Warpa:
   command: /Warpa
   type: RUN_CONSOLE
   runcmd:
-  - /execute as @s[tag=RulesAccepted] run function joshtiger:commands/-warpa/warpa #cut some fat; runs the warpa command as usual
-  - /execute as @s[tag=!RulesAccepted] run tellraw @s {"text":"&f[&5&lJIMBO&f] &cDo /rules to advance.","color":"red"} #cut some fat, gives an error if rules not yet accepted.
-  - $delay$/execute as @s[tag=RulesAccepted] run function joshtiger:casteffect/1 #cut some fat.
+  - /execute as @s[tag=RulesAccepted] at @s run function joshtiger:commands/-warpa/warpa #cut some fat; runs the warpa command as usual
+  - /execute as @s[tag=!RulesAccepted] at @s run tellraw @s {"text":"&f[&5&lJIMBO&f] &cDo /rules to advance.","color":"red"} #cut some fat, gives an error if rules not yet accepted.
+  - $delay$/execute as @s[tag=RulesAccepted] at @s run function joshtiger:casteffect/1 #cut some fat.
 
   delaytimer: 1
   delaytimer_format: TICKS
